1- fixing details style bug 2- fixing img bug 3- search filed enhancement 4- align content on center 5- extra code enhancement

--- a/details/details.html
+++ b/details/details.html
@@ -7,8 +7,8 @@
      such as Java, Ruby, C#, PHP, C++, JQuery, and more.">
 
     <title>Web Topics</title>
-    <link rel="stylesheet" type="text/css" href="./css/variables.css">
-    <link rel="stylesheet" type="text/css" href="./details.css">
+    <link rel="stylesheet" type="text/css" href="../css/variables.css">
+    <link rel="stylesheet" type="text/css" href="../details/details.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap">
 </head>
 <body>
@@ -39,7 +39,7 @@
    <div class="mobile-content">
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/Logos/responsive.gif" alt="Course Image">
+               <img class="course-image" src='../assets/Logos/css.webp' alt="Course Image">
            </div>
            <div class="card-info">
                <h2 >HTML by <a >Sarah Smith</a></h2>
@@ -110,7 +110,7 @@
                 </section>
             <section class="course-card">
                 <div class="course-image-container">
-                    <img class="course-image" src="./assets/Logos/responsive.gif" alt="Course Image">
+                    <img class="course-image" src='../assets/Logos/css.webp' alt="Course Image">
                 </div>
                 <div class="card-info">
                     <h2 >HTML by <a >Sarah Smith</a></h2>
