--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header class="header">
-     <div class="first-part">
+     <div class="header-first-part">
          <h1>Web Topics</h1>
          <div class="web-controls-mobile">
              <button class="button" id="toggleDarkModeButtonMobile"><ion-icon name="moon-outline"></ion-icon></button>
@@ -24,7 +24,7 @@
              <button class="button"><ion-icon name="heart-outline"></ion-icon> Favourites</button>
          </div>
      </div>
-    <div class="second-part">
+    <div class="header-second-part">
         <section class="top-page-design">
             <div class="triangle"></div>
             <div class="triangle-2"></div>
