--- a/details/details.html
+++ b/details/details.html
@@ -14,14 +14,16 @@
 <body>
 <header class="header">
     <div class="first-part">
-        <h1>Web Topics</h1>
+        <a href="../index.html">
+            <h1>Web Topics</h1>
+        </a>
         <div class="web-controls-mobile">
             <button class="button" id="toggleDarkModeButtonMobile"><ion-icon name="moon-outline"></ion-icon></button>
-            <button class="button"><ion-icon name="heart-outline"></ion-icon></button>
+            <button class="button" id="favorite-button-mobile" aria-label="favourite"><ion-icon name="heart-outline"></ion-icon></button>
         </div>
         <div class="web-controls">
             <button class="button" id="toggleDarkModeButton"><ion-icon name="moon-outline"></ion-icon> Dark Mode</button>
-            <button class="button"><ion-icon name="heart-outline"></ion-icon> Favourites</button>
+            <button class="button" id="favorite-button" aria-label="favourite"><ion-icon name="heart-outline"></ion-icon> Favourites</button>
         </div>
     </div>
     <div class="second-part">
@@ -36,125 +38,24 @@
     </div>
 </header>
 <main class="container">
+    <div class="loading-indicator">
+        <div class="loader"></div>
+        <h3>Topic is Loading ...</h3>
+    </div>
+    <div class="error">
+
+    </div>
    <div class="mobile-content">
-       <section class="course-card">
-           <div class="course-image-container">
-               <img class="course-image" src='../assets/Logos/css.webp' alt="Course Image">
-           </div>
-           <div class="card-info">
-               <h2 >HTML by <a >Sarah Smith</a></h2>
-               <div class="add-to-favorite-box">
-                   <h2>Interested about this topic?</h2>
-                   <button>Add to Favourites ♡</button>
-                   <p>Unlimited Credits</p>
-               </div>
-           </div>
-       </section>
-       <section class="course-details">
-           <h2 class="course-title">Web Development Languages</h2>
-           <h2 class="language-name">HTML</h2>
-           <div class="rating-stars">
-               <ion-icon name="star"></ion-icon>
-               <ion-icon name="star"></ion-icon>
-               <ion-icon name="star"></ion-icon>
-               <ion-icon name="star"></ion-icon>
-               <ion-icon name="star-outline"></ion-icon>
-           </div>
-           <p class="course-description">HTML (Hypertext Markup Language) is the standard markup language for creating web pages and other information that can be displayed in a web browser. It provides a structure for content and defines how it should be displayed on a web page, including text, images, and multimedia. HTML is essential for creating static web pages and is a foundational technology for the World Wide Web
-           </p>
-       </section>
-       <section class="course-topics">
-           <table>
-               <thead>
-               <tr>
-                   <th>HTML Sub Topics</th>
-               </tr>
-               </thead>
-               <tbody>
-               <tr>
-                   <td> HTML syntax and structure</td>
-               </tr>
-               <tr>
-                   <td> HTML elements and attributes</td>
-               </tr>
-               <tr>
-                   <td> HTML forms and input elements</td>
-               </tr>
-               <tr>
-                   <td> HTML tables and lists</td>
-               </tr>
-               <tr>
-                   <td> HTML multimedia elements (audio, video, images)</td>
-               </tr>
-               <tr>
-                   <td> HTML accessibility and semantic markup</td>
-               </tr>
-               </tbody>
-           </table>
-       </section>
+       <p class="error-msg"></p>
    </div>
     <div class="web-content">
-        <div class="first-content">
-                <section class="course-details">
-                    <h2 class="course-title">Web Development Languages</h2>
-                    <h2 class="language-name">HTML</h2>
-                    <div class="rating-stars">
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star-outline"></ion-icon>
-                    </div>
-                    <p class="course-description">HTML (Hypertext Markup Language) is the standard markup language for creating web pages and other information that can be displayed in a web browser. It provides a structure for content and defines how it should be displayed on a web page, including text, images, and multimedia. HTML is essential for creating static web pages and is a foundational technology for the World Wide Web
-                    </p>
-                </section>
-            <section class="course-card">
-                <div class="course-image-container">
-                    <img class="course-image" src='../assets/Logos/css.webp' alt="Course Image">
-                </div>
-                <div class="card-info">
-                    <h2 >HTML by <a >Sarah Smith</a></h2>
-                    <div class="add-to-favorite-box">
-                        <h2>Interested about this topic?</h2>
-                        <button>Add to Favourites ♡</button>
-                        <p>Unlimited Credits</p>
-                    </div>
-                </div>
-            </section>
-        </div>
-        <div class="second-content">
-            <section class="course-topics">
-                <table>
-                    <thead>
-                    <tr>
-                        <th>HTML Sub Topics</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td> HTML syntax and structure</td>
-                    </tr>
-                    <tr>
-                        <td> HTML elements and attributes</td>
-                    </tr>
-                    <tr>
-                        <td> HTML forms and input elements</td>
-                    </tr>
-                    <tr>
-                        <td> HTML tables and lists</td>
-                    </tr>
-                    <tr>
-                        <td> HTML multimedia elements (audio, video, images)</td>
-                    </tr>
-                    <tr>
-                        <td> HTML accessibility and semantic markup</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </section>
-        </div>
+        <p class="error-msg"></p>
     </div>
 </main>
+<!--Favorite Modal-->
+<div id="favorite-modal" class="favorite-modal">
+</div>
+<!--Footer HTML Structure-->
 <footer>
     <div class="copyrights">
         <p>Developed with ❤️ © 2023</p>
@@ -162,16 +63,7 @@
 </footer>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-<script>
-    const toggleDarkModeButton = document.getElementById('toggleDarkModeButton');
-    toggleDarkModeButton.addEventListener('click', () => {
-        document.body.classList.toggle('dark-mode');
-    });
-    const toggleDarkModeButtonMobile = document.getElementById('toggleDarkModeButtonMobile');
-    toggleDarkModeButtonMobile.addEventListener('click', () => {
-        document.body.classList.toggle('dark-mode');
-    });
-
-</script>
+<script src="details.js"></script>
+<script src="../favorite%20Topics%20Modal/favoriteTopicsModal.js"></script>
 </body>
 </html>
