--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <!--Header HTML Structure-->
 <header class="header">
     <div class="header-first-part">
-        <h1>Web Topics</h1>
+        <h1 id="webTopicsHeading">Web Topics</h1>
         <div class="web-controls-mobile">
             <button class="button" id="toggleThemeModeButtonMobile" onclick="themeMode()" aria-label="dark mode"><ion-icon name="moon-outline"></ion-icon></button>
-            <button class="button" id="favorite-buttonMobile" aria-label="favourite"><ion-icon name="heart-outline"></ion-icon></button>
+            <button class="button" id="favorite-button-mobile" aria-label="favourite"><ion-icon name="heart-outline"></ion-icon></button>
         </div>
         <div class="web-controls">
             <button class="button" id="toggleThemeModeButton" onclick="themeMode()" aria-label="dark mode"><ion-icon name="moon-outline"></ion-icon> Dark Mode</button>
@@ -84,46 +84,12 @@
 </footer>
 <!--Favorite Modal-->
 <div id="favorite-modal" class="favorite-modal">
-    <div class="modal-content">
-        <h2>My Favourite Topics</h2>
-        <div class="favorite-courses-list">
-            <div class="favorite-course-card">
-                <div class="favorite-course-card-image-container">
-                    <img class="favorite-course-image" src="assets/Logos/html.png">
-                </div>
-                <div class="favorite-course-card-body">
-                    <h3>HTML</h3>
-                    <div class="rating-stars">
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star-outline"></ion-icon>
-                    </div>
-                </div>
-            </div>
-            <div class="favorite-course-card">
-                <div class="favorite-course-card-image-container">
-                    <img class="favorite-course-image" src="assets/Logos/html.png">
-                </div>
-                <div class="favorite-course-card-body">
-                    <h3>HTML</h3>
-                    <div class="rating-stars">
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star-outline"></ion-icon>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 <!--Footer HTML Structure-->
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script src="script.js"></script>
+<script src="favorite%20Topics%20Modal/favoriteTopicsModal.js"></script>
 </body>
 </html>
